src/pages/index.module.css
/**
 * CSS files with the .module.css suffix will be treated as CSS modules
 * and scoped locally.
 */

.heroBanner {
  padding: 4rem 0;
  text-align: center;
  position: relative;
  overflow: hidden;
  background-color: var(--ifm-background-color-secondary);
}

.heroImage {
  border-radius: 50%; /* Makes the image circular */
  width: 25%; /* Adjust width */
  height: 25%; /* Adjust height */
  object-fit: cover; /* Ensures the image is cropped nicely if it's not square */
}

@media screen and (max-width: 996px) {
  .heroBanner {
    padding: 2rem;
  }
}

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

.socialLinks {
  margin-top: 20px;
  display: flex;
  justify-content: center;
  gap: 20px;
}

.icon {
  color: var(--ifm-color-foreground);
  font-size: 3rem; /* Adjust icon size */
  transition: color 0.3s ease;
}

.icon:hover {
  color: var(--ifm-color-primary); /* Change color on hover */
}

